Add recommendation section with styling

--- a/index.html
+++ b/index.html
@@ -218,6 +218,45 @@
         </div>
     </section>
 
+    <section class="section" id="recommendations">
+        <div class="container">
+            <h2 class="section-title">Recommendation</h2>
+            <div class="recommendation-card">
+                <div class="recommendation-content">
+                    <p>Yajna has been a cornerstone of our team, and his contributions have been
+                        <strong>invaluable</strong>. His <strong>dedication</strong> and <strong>hard work</strong>,
+                        often involving countless sleepless nights, have been crucial in driving our projects to
+                        success.
+                    </p>
+
+                    <p>Yajna's <strong>unwavering commitment</strong> and <strong>passion for excellence</strong> have
+                        set a <strong>benchmark</strong> for all of us. From tackling complex challenges with a smile to
+                        being a dependable teammate in times of need, Yajna has always gone <strong>above and
+                            beyond</strong> to ensure the <strong>success</strong> of our team and projects.</p>
+
+                    <p>His <strong>innovative ideas</strong>, <strong>problem-solving skills</strong>, and
+                        <strong>positive attitude</strong> have left a lasting impact on all of us. Yajna, we will miss
+                        your presence, your <strong>camaraderie</strong>, and your <strong>invaluable
+                            contributions</strong>. Your departure leaves a void that will be hard to fill, but we take
+                        comfort in knowing that you are moving on to new and exciting opportunities. We are confident
+                        that you will continue to achieve great things and inspire everyone around you.
+                    </p>
+
+                    <p>Thank you for everything you have done for us. We wish you all the best in your future
+                        endeavours.</p>
+                </div>
+                <div class="recommendation-author">
+                    <p class="author-name">Mansoor Khan</p>
+                    <p class="author-title">Yajna's Reporting Manager @ New Street Technologies</p>
+                    <a href="https://www.linkedin.com/in/mansoor-khan-4a934112b/" class="author-linkedin"
+                        target="_blank">
+                        <i class="fab fa-linkedin"></i> View Profile
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="section" id="contact">
         <div class="container">
             <h2 class="section-title">Contact Me</h2>
